// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Switch /> should match snapshot when toggled 1`] = `
<div
  aria-disabled="false"
  aria-label="toggle on"
  class="root toggled"
>
  <span
    class="handle"
  />
</div>
`;

exports[`<Switch /> should match snapshot when toggled and disabled 1`] = `
<div
  aria-disabled="true"
  aria-label="toggle on"
  class="root toggled disabled"
>
  <span
    class="handle"
  />
</div>
`;

exports[`<Switch /> should match snapshot when un-toggled 1`] = `
<div
  aria-disabled="false"
  aria-label="toggle off"
  class="root"
>
  <span
    class="handle"
  />
</div>
`;

exports[`<Switch /> should match snapshot when un-toggled and disabled 1`] = `
<div
  aria-disabled="true"
  aria-label="toggle off"
  class="root disabled"
>
  <span
    class="handle"
  />
</div>
`;

exports[`<Switch /> should match snapshot without props 1`] = `
<div
  aria-disabled="false"
  aria-label="toggle off"
  class="root"
>
  <span
    class="handle"
  />
</div>
`;
